tests/paczka1/fuzzy1/10509474.err
Error in line 11: A813 A475 74,6
Error in line 13: A813 S323 70,4
Error in line 2: 1OqSCyK6Sz S323 69,7
